templates/tpl_modified/stylesheet.css
/* ... */
.lb_tax a {
  color:#999;
  text-decoration:underline;
}
.lb_tax a:hover {
  color:#999;
  text-decoration:underline;
}
/* END productlist boxes */


/* 20. START productlist rows */
.listingrow {
  height:auto;
  margin: 0px 10px 0px 10px;  
}
.lr_inner {
  padding: 10px 0px 10px 0px;
  border-bottom: 1px solid #ddd;
  min-height:160px;
  position:relative;
}
.lr_image {
  float:left;
  text-align: center;
  width: 21.4765%;
  height:160px;  
  overflow:hidden;
}
.lr_image img {
  background-color: #FFFFFF;
  margin: 0 auto;
  max-height:160px;
  max-width:160px;
}
.lr_content {
  float:right;
  width:75.8389%;
}
.lr_title {
  border-bottom: 1px dotted #ddd;
  padding: 0px 0px 5px 0px;
}
.lr_title h2 {
  margin: 0px;  
  padding:0px;
  border:none !important;
  line-height:15px;
  font-size:13px;
  color:#444;
}
.lr_title h2 a {
  color:#6D2551;
}
.lr_title h2 a:hover {
  color:#444;
  text-decoration:none;
}
.lr_desc_box {
  float:left;
  width:64.6017%;
}
.lr_price_box {
  float:right;
  width:31.8584%;
}
.lr_desc {
  font-size:13px;
  line-height:17px;
  border-bottom: 1px dotted #ddd;
}
.lr_desc ul{
  margin: 8px 0px 8px 15px;
}
.lr_desc ol{
  margin: 8px 0px 8px 15px;
}
.lr_shipping {
  padding: 5px 0px;
  font-size:12px;
  text-align:left;
  border-bottom: 1px dotted #ddd;
}
.lr_shipping .lr_shipping_image {
  display:inline-block;
  padding: 0 5px 0 0;
}
.lr_vpe {
  font-family: 'fjallaoneregular', sans-serif;
  text-align:right;
  padding: 5px 0px 0 0;
  font-size:9px;
  line-height:12px;
  color:#666;
}
.lr_price {
  font-family: 'fjallaoneregular', sans-serif;
  text-align:right;
  padding: 10px 0 0 0;
  color:#434343;
}
.lr_price .standard_price {
  display:block;
  font-size: 16px;
  line-height:20px;
  color:#434343;
}
.lr_price .new_price {
  display:block;
  font-size:16px;
  line-height:22px;
  font-weight:normal;
  color:#bc0000;
}
.lr_price .special_price {
  display:block;
  font-size:16px;
  line-height:22px;
  font-weight:normal;
  color:#bc0000;
}
.lr_price .small_price {
  font-size:9px;
  font-weight:normal;
  line-height:11px;
}
.lr_price .old_price {
  display:block;
  font-size:12px;
  line-height:18px;
  font-weight:normal;
  color:#777;
}
.lr_price .save_price {
  display:block;
  font-size:9px;
  font-weight:normal;
  line-height:15px;
}
.lr_price .item_price {
  display:block;
  font-size:12px;
  line-height:18px;
  font-weight:normal;
  color:#777;
}
.lr_price .uvp_price {
  display:block;
  font-size: 16px;
  line-height:20px;
  color:#434343;  
}
.lr_price .graduated_price {
  display:block;
  font-size: 16px;
  line-height:20px;
  color:#434343;
}
.lr_tax {
  text-align:right;
  padding: 0 0 0 0;
  font-size:10px;
  color:#999;
  line-height:18px;
}
.lr_tax a {
  color:#999;
  text-decoration:underline;
}
.lr_tax a:hover {
  color:#999;
  text-decoration:underline;
}
.lr_buttons {
  position:absolute;
  display:inline-block;
  right:0px;
  bottom:10px;
}
/* END productlist rows */


/* 21. START categories listing & subcats */
.cat_description {
  padding: 0px 0px 25px 0px; 
}
.cat_description ul {
  margin-left:15px;
}
.cat_description ol {
  margin-left:28px;
}
.cat_image {
  float:left;
  margin: 6px 25px 10px 0px;
  max-width:745px;
  position:relative;
}
.ci_nomargin {
  margin-right: 0px !important;
  max-width:755px;
}
.subcats {
  margin: 0 0 25px 0;
}
.subcatlist {
  float:left;
  width:139px;
  height:auto;
  margin: 0px 10px 10px 0px;
  border: 1px solid #ccc;
}
.subcatlist.last {
  margin: 0px 0px 10px 0px;
}  
.subcat_image {
  display:table-cell;
  vertical-align:middle;
  text-align:center;
  width:139px;
  height:100px;
  overflow:hidden;
}
.subcat_image img {
  max-width:139px;
  height:auto;
  text-align:center;
}
.subcat_title {
  display:block;
  padding:5px 5px;
  color:#444;
  background:#f2f2f2;
  font-size:12px;
  height:26px;
  line-height:14px;
  text-align:center;
  font-weight:bold;
}
.subcat_desc {
  display:inline-block;
  padding:5px;
  font-size:12px;
  line-height:16px;
}
.subcatlist a {
  color:#444;
  display:block;
}
.subcatlist a:hover {
  text-decoration:none;
}
.subcatlist a:hover  .subcat_title {
  color:#6D2551 !important;
  text-decoration:none !important;
  background:#e6e6e6;
}
.manu_description {
  padding: 0px 0px 25px 0px; 
}
.manu_description ul {
  margin-left:15px;
}
.manu_description ol {
  margin-left:28px;
}
.manu_image {
  float:left;
  margin: 6px 25px 10px 0px;
  max-width:745px;
  position:relative;
}
.mi_nomargin {
  margin-right: 0px !important;
  max-width:755px;
}
/* END categories listing & subcats */



/* 22. START pagination */
.pagination_bar {
  padding: 0px 0px 0px 0px;
  margin: 15px 0 15px 0;
}
.pagination_text {
  float:left;
  display:inline-block;
  font-size:12px;
  line-height:22px;
  vertical-align:middle;
  color:#444;
}
.pagination_list {
  display:inline-block;
  float:right;
  font-size:12px;
  line-height:22px;
}
.pagination_list ul {
  list-style-type:none;
  margin: 0;
}
.pagination_list ul li {
  float:left;
  font-size: 11px;  
  line-height: 21px;
  text-align: center;
  padding: 0; 
}
.pagination_list ul li.plain {
  padding: 0 4px;
}
.pagination_list ul li a {
  display: inline-block;
  min-width:13px;
  padding: 0 4px;
  margin: 0 0 0 3px;
  color: #666; 
  text-decoration:none;
  background-color: #D7D7D7;
}
.pagination_list ul li a:hover {
  color: #fff; 
  background-color: #6D2551;
}
.pagination_list ul li.current {
  display: inline-block;
  min-width:13px;
  padding: 0 4px;
  margin: 0 0 0 3px;
  color: #fff; 
  font-weight:bold;
  background-color: #6D2551;
}
/* END pagination */


/* 23. START filter manufacturer */
.filter_bar {
  background-color: #f2f2f2;
  border: 1px solid #e6e6e6;
  margin-bottom: 15px;
  padding: 5px 5px;
}
.filter_bar .manufacturer_filter {
  float:left;
  width:200px;
}
/* END filter manufacturer */


/* 24. START content sites (AGB, Datenschutz, etc.) */
.content_site {

}
.content_site ul {
  margin-left:15px;
}
/* ... */

